<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fontcolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#B29AF19A"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/colorfonttitle"
            android:textSize="22sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#24276B"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/colorfontnote"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#24276B"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/colorfontdate"
            android:textSize="13sp"/>

        <LinearLayout
            android:id="@+id/ll_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_colortitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@drawable/bt_color_title"
                android:text="@string/colorfonttitle"
                android:textColor="@color/black_colorPrimary" />

            <Button
                android:id="@+id/bt_colornote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_color_note"
                android:text="@string/colorfontnote"
                android:textColor="@color/black_colorPrimary" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_colordate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_color_date"
            android:gravity="center"
            android:text="@string/colorfontdate"
            android:textColor="@color/black_colorPrimary" />

    </LinearLayout>


</RelativeLayout>