<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fonttext"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"
        android:background="#B29AF19A"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/stylefonttitle"
            android:textSize="22sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#24276B"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/stylefontnote"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#24276B"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/stylefontdate"
            android:textSize="13sp"/>

        <LinearLayout
            android:id="@+id/ll_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_styletitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@drawable/bt_color_title"
                android:text="@string/stylefonttitle"
                android:textColor="@color/black_colorPrimary" />

            <Button
                android:id="@+id/bt_stylenote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_color_note"
                android:text="@string/stylefontnote"
                android:textColor="@color/black_colorPrimary" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_styledate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_color_date"
            android:gravity="center"
            android:text="@string/stylefontdate"
            android:textColor="@color/black_colorPrimary" />


    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_tv"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        >

        <LinearLayout
            android:id="@+id/ll_fontstyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#8324276B">
            <ListView
                android:id="@+id/lv_fontstyle_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="#A1FDA68F"
                android:listSelector="@drawable/list_selector"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_fontstyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#8324276B">

            <ListView
                android:id="@+id/lv_fontstyle_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="#90F0A6BC"
                android:listSelector="@drawable/list_selector"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_fontstyle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#8324276B">

            <ListView
                android:id="@+id/lv_fontstyle_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="#C8A6D5F7"
                android:listSelector="@drawable/list_selector"/>
        </LinearLayout>


    </FrameLayout>


</RelativeLayout>

